2007-07-10  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp (GetUTF8StringProperty): Take
	a nsACString so we can just assign the UTF8 version of the fetched
	string.
	(GetProperty): Use nsCAutoString for visible utf8 strings.

	* compzilla/Makefile.am (libcompzilla_la_CPPFLAGS): Add
	fvisibility=hidden, so we don't add any symbols to further slow
	down moz linking.

	* compzilla/src/compzillaControl.cpp (InitWindowState): Don't
	select cursor input, since it's useless with the overlay window.

	* compzilla/chrome/content/frame.js: Fix sizing bug where content
	needed to be forced +30 pixels of Y offset.
	In moveResizeToContent, don't constrain size to work area for
	windows that have strut info set.

2007-07-09  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/Debug.h: Switch to using PR_LOG.  The module name
	is "compzilla".  Set NSPR_LOG_MODULES="compzilla:5" in your
	environment to get debugging output.

2007-07-08  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/Debug.h: Pull out debug printing defines to here.

2007-07-08  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/start.js: If a window manager is
	running, call promptReplaceWindowManager.  Always call
	promptSetDefaultWindowManager for now.  In the future, this should
	be inhibitable with a checkbox.

	* compzilla/chrome/content/prompt.js: New file, contains user
	prompting code.
	(promptReplaceWindowManager): Ask the user if they want to replace
	their existing window manager.
	(promptSetDefaultWindowManager): If the nsIGConfService is
	available, prompt to set pyro as the default WM.  This is broken
	currently, as the gnome-wm script, which looks at the gconf value
	we set, expects it to be a single file name.  We need to bundle
	a run-compzilla.sh script with the extension to fix this.

	* compzilla/chrome/content/content.js: In wmStruts getter, catch
	exception on access of _PARTIAL.
