@@ -1,3 +1,3 @@
 #!/bin/bash
 
-Xephyr -ac -noreset :1
+Xephyr -screen 800x600 -ac -noreset :1
